[package]
name = "melones"
version = "0.1.0"
authors = ["TheMeadoftheArchant <46138916+TheMeadoftheArchant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23"
imgui = "*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"